Template of the code including card

--- a/templates/home.html
+++ b/templates/home.html
@@ -13,14 +13,12 @@
   <div class="card-body">
       <div class="row">
         <div class="col">
-          1 of 3
+          1 of 2
         </div>
         <div class="col-6">
-          2 of 3 (wider)
+          2 of 2 (wider)
         </div>
-        <div class="col">
-          3 of 3
-        </div>
+
       </div>
   </div>
 </div>
@@ -29,13 +27,13 @@
   <div class="card-body">
 <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="#">Active</a>
+    <a class="nav-link active" aria-current="page" href="#">Temperature</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
+    <a class="nav-link" href="#">Precipitation</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
+    <a class="nav-link" href="#">Wind</a>
   </li>
 </ul>
   </div>
@@ -45,23 +43,25 @@
   <div class="card-body">
  <div class="row">
         <div class="col">
-          1 of 8
+          Monday
         </div>
         <div class="col">
-          2 of 8
+          Tuesday
         </div>
         <div class="col">
-          3 of 8
+          Wednesday
         </div>
              <div class="col">
-          4 of 8
+          Thursday
         </div>
         <div class="col">
-          5 of 8
+          Friday
         </div>
         <div class="col">
-          6 of 8
+          Saturday
         </div>
+     <div class="col">
+         Sunday
       </div>
   </div>
 </div>
