--- a/templates/home.html
+++ b/templates/home.html
@@ -40,21 +40,20 @@
   </div>
 </div>
 
-<div class="card" style="width: 50%;">
+<div class="card" style="width: 100%;">
   <div class="card-body">
- <div class="row">
-         {% for forecast in forecast_data %}
-         <div class="col"
-            {{ forecast["day_of_week"] }}
-             <br>
-            <img src="{{forcast['icon'] }}"
-            <br>
-            {{ forecast["temp"] }}
-            <br>
-            {{ forecast["description"] }}
-            </div>
-         {% endfor %}
+    <div class="row">
+      {% for data in forecast_data %}
+      <div class="col">
+        <p>{{ data.day_name }}</p>
+        <img src="{{ data.icon_url }}" alt="Weather Icon" style="width: 100px;" style="height: 200px;">
+        <p> Temperature: {{ data.temp }} °C</p>
+        <p> Rain: {{ data.rain }}</p>
+        <p> Description: {{ data.description }}</p>
+        <p> Date: {{ data.dt_text }}</p>
       </div>
+      {% endfor %}
+    </div>
   </div>
 </div>
 
